--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "project-management-tool"]
 	path = project-management-tool
 	url = https://github.com/pratikchi2019/PMT.git
+	ignore = dirty
