--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mssql": "^7.3.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.8.0",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.0"
   },
